tests/negative/parfor_in_transaction.def
// Negative unit test for a parfor inside of a transaction.

def foo () -> void
begin
    atomic begin
        parfor  ; true ; do
            foo();
        od
    end
end
